# rusty-web-log

./: Cargo.toml  README.md
src/: main.rs
src/data/: mod.rs  post.rs  user.rs
src/util/: error_reporter.rs  helpers.rs  mod.rs
templates/: footer.hbs  header.hbs  index.hbs  post.hbs
